Added two fields to tags table and regenerated the swagger.json
